syntax = "proto3";

package synctv.client;

// ==================== Auth Service ====================
// Authentication: None (public access)
// Routes: /api/auth/*
service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

// ==================== User Service ====================
// Authentication: JWT Authorization header (user_id)
// Routes: /api/user/*
service UserService {
    // Profile Management
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse);
    rpc UpdateUsername(UpdateUsernameRequest) returns (UpdateUsernameResponse);
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);

    // User's Rooms
    rpc GetMyRooms(GetMyRoomsRequest) returns (GetMyRoomsResponse); // Rooms created by user
    rpc GetJoinedRooms(GetJoinedRoomsRequest) returns (GetJoinedRoomsResponse); // Rooms user joined
}

// ==================== Room Service ====================
// Authentication: JWT Authorization header (user_id) + x-room-id metadata (room context)
// Routes: /api/room/*
service RoomService {
    // Room Management (resource-targeted operations)
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse); // Create new room
    rpc GetRoom(GetRoomRequest) returns (GetRoomResponse); // Get specific room
    rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse); // Join specific room
    rpc LeaveRoom(LeaveRoomRequest) returns (LeaveRoomResponse); // Leave specific room
    rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse); // Delete specific room
    rpc UpdateRoomSettings(UpdateRoomSettingsRequest) returns (UpdateRoomSettingsResponse); // Update specific room

    // Member Management (room-scoped operations, use x-room-id)
    rpc GetRoomMembers(GetRoomMembersRequest) returns (GetRoomMembersResponse);
    rpc UpdateMemberPermission(UpdateMemberPermissionRequest) returns (UpdateMemberPermissionResponse);
    rpc KickMember(KickMemberRequest) returns (KickMemberResponse);

    // Real-time Messaging (room-scoped, use x-room-id)
    rpc MessageStream(stream ClientMessage) returns (stream ServerMessage);
    rpc GetChatHistory(GetChatHistoryRequest) returns (GetChatHistoryResponse);
}

// ==================== Media Service ====================
// Authentication: JWT Authorization header (user_id) + x-room-id metadata (room context)
// Routes: /api/room/media/*
service MediaService {
    // Playlist Management (room-scoped operations, use x-room-id)
    rpc AddMedia(AddMediaRequest) returns (AddMediaResponse);
    rpc RemoveMedia(RemoveMediaRequest) returns (RemoveMediaResponse);
    rpc GetPlaylist(GetPlaylistRequest) returns (GetPlaylistResponse);
    rpc SwapMedia(SwapMediaRequest) returns (SwapMediaResponse);

    // Playback Control (room-scoped operations, use x-room-id)
    rpc Play(PlayRequest) returns (PlayResponse);
    rpc Pause(PauseRequest) returns (PauseResponse);
    rpc Seek(SeekRequest) returns (SeekResponse);
    rpc ChangeSpeed(ChangeSpeedRequest) returns (ChangeSpeedResponse);
    rpc SwitchMedia(SwitchMediaRequest) returns (SwitchMediaResponse);
    rpc GetPlaybackState(GetPlaybackStateRequest) returns (GetPlaybackStateResponse);

    // Live Streaming (room-scoped, use x-room-id)
    rpc NewPublishKey(NewPublishKeyRequest) returns (NewPublishKeyResponse);
}

// ==================== Public Service ====================
// Authentication: None (public access)
// Routes: /api/public/*
service PublicService {
    rpc CheckRoom(CheckRoomRequest) returns (CheckRoomResponse);
    rpc ListRooms(ListRoomsRequest) returns (ListRoomsResponse);
    rpc GetHotRooms(GetHotRoomsRequest) returns (GetHotRoomsResponse);
}

// Common Types
message User {
    string id = 1;
    string username = 2;
    string email = 3;
    int64 permissions = 4;
    int64 created_at = 5;
}

message Room {
    string id = 1;
    string name = 2;
    string created_by = 3;
    string status = 4; // active, closed
    bytes settings = 5; // JSON settings
    int64 created_at = 6;
    int32 member_count = 7;
}

message Media {
    string id = 1;
    string room_id = 2;
    string url = 3;
    string provider = 4; // bilibili, alist, emby, direct
    string title = 5;
    bytes metadata = 6; // JSON metadata
    int32 position = 7; // Position in playlist
    int64 added_at = 8;
    string added_by = 9;
}

message PlaybackState {
    string room_id = 1;
    string current_media_id = 2;
    double position = 3; // seconds
    double speed = 4;
    bool is_playing = 5;
    int64 updated_at = 6;
    int32 version = 7; // For optimistic locking
}

message RoomMember {
    string room_id = 1;
    string user_id = 2;
    string username = 3;
    int64 permissions = 4;
    int64 joined_at = 5;
    bool is_online = 6;
}

// Authentication Messages
message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    User user = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message GetCurrentUserRequest {}

message GetCurrentUserResponse {
    User user = 1;
}

// Room Management Messages
message CreateRoomRequest {
    string name = 1;
    string password = 2; // Optional room password
    bytes settings = 3; // JSON settings
}

message CreateRoomResponse {
    Room room = 1;
}

message GetRoomRequest {
    string room_id = 1;
}

message GetRoomResponse {
    Room room = 1;
    PlaybackState playback_state = 2;
}

message JoinRoomRequest {
    string room_id = 1;
    string password = 2; // Optional room password
}

message JoinRoomResponse {
    Room room = 1;
    PlaybackState playback_state = 2;
    repeated RoomMember members = 3;
}

message LeaveRoomRequest {
    string room_id = 1;
}

message LeaveRoomResponse {
    bool success = 1;
}

message ListRoomsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListRoomsResponse {
    repeated Room rooms = 1;
    int32 total = 2;
}

message DeleteRoomRequest {
    string room_id = 1;
}

message DeleteRoomResponse {
    bool success = 1;
}

message UpdateRoomSettingsRequest {
    string room_id = 1;
    bytes settings = 2; // JSON settings
}

message UpdateRoomSettingsResponse {
    Room room = 1;
}

// Room Members Messages
// Note: room_id extracted from x-room-id metadata
message GetRoomMembersRequest {}

message GetRoomMembersResponse {
    repeated RoomMember members = 1;
}

message UpdateMemberPermissionRequest {
    string user_id = 1;        // Target user
    int64 permissions = 2;      // New permissions
}

message UpdateMemberPermissionResponse {
    RoomMember member = 1;
}

message KickMemberRequest {
    string user_id = 1;  // Target user to kick
}

message KickMemberResponse {
    bool success = 1;
}

// Playlist Messages
// Note: room_id extracted from x-room-id metadata
message AddMediaRequest {
    string url = 1;
    string provider = 2; // Optional, auto-detect if empty
}

message AddMediaResponse {
    Media media = 1;
}

message RemoveMediaRequest {
    string media_id = 1;
}

message RemoveMediaResponse {
    bool success = 1;
}

message GetPlaylistRequest {}

message GetPlaylistResponse {
    repeated Media media = 1;
}

message SwapMediaRequest {
    string media_id1 = 1;
    string media_id2 = 2;
}

message SwapMediaResponse {
    bool success = 1;
}

// Playback Control Messages
// Note: room_id extracted from x-room-id metadata
message PlayRequest {}

message PlayResponse {
    PlaybackState playback_state = 1;
}

message PauseRequest {}

message PauseResponse {
    PlaybackState playback_state = 1;
}

message SeekRequest {
    double position = 1; // seconds
}

message SeekResponse {
    PlaybackState playback_state = 1;
}

message ChangeSpeedRequest {
    double speed = 1; // 0.5, 1.0, 1.5, 2.0, etc.
}

message ChangeSpeedResponse {
    PlaybackState playback_state = 1;
}

message SwitchMediaRequest {
    string media_id = 1;
}

message SwitchMediaResponse {
    PlaybackState playback_state = 1;
}

message GetPlaybackStateRequest {}

message GetPlaybackStateResponse {
    PlaybackState playback_state = 1;
}

// Real-time Messaging
message ClientMessage {
    oneof message {
        ChatMessageSend chat = 1;
        DanmakuMessageSend danmaku = 2;
        HeartbeatMessage heartbeat = 3;
    }
}

message ServerMessage {
    oneof message {
        ChatMessageReceive chat = 1;
        DanmakuMessageReceive danmaku = 2;
        PlaybackStateChanged playback_state = 3;
        UserJoinedRoom user_joined = 4;
        UserLeftRoom user_left = 5;
        RoomSettingsChanged room_settings = 6;
        HeartbeatAck heartbeat_ack = 7;
        ErrorMessage error = 8;
    }
}

// Note: room_id extracted from x-room-id metadata in MessageStream context
message ChatMessageSend {
    string content = 1;
}

message ChatMessageReceive {
    string id = 1;
    string room_id = 2;
    string user_id = 3;
    string username = 4;
    string content = 5;
    int64 timestamp = 6;
}

// Note: room_id extracted from x-room-id metadata in MessageStream context
message DanmakuMessageSend {
    string content = 1;
    string color = 2; // hex color
    int32 position = 3; // 0=top, 1=bottom, 2=scroll
}

message DanmakuMessageReceive {
    string room_id = 1;
    string user_id = 2;
    string content = 3;
    string color = 4;
    int32 position = 5;
    int64 timestamp = 6;
}

message HeartbeatMessage {
    int64 timestamp = 1;
}

message HeartbeatAck {
    int64 timestamp = 1;
}

message PlaybackStateChanged {
    string room_id = 1;
    PlaybackState state = 2;
}

message UserJoinedRoom {
    string room_id = 1;
    RoomMember member = 2;
}

message UserLeftRoom {
    string room_id = 1;
    string user_id = 2;
}

message RoomSettingsChanged {
    string room_id = 1;
    bytes settings = 2; // JSON settings
}

message ErrorMessage {
    string code = 1;
    string message = 2;
}

// Chat History
// Note: room_id extracted from x-room-id metadata
message GetChatHistoryRequest {
    int32 limit = 1; // Max 500
    int64 before = 2; // Timestamp for pagination
}

message GetChatHistoryResponse {
    repeated ChatMessageReceive messages = 1;
}

// User Profile Management
message LogoutRequest {}

message LogoutResponse {
    bool success = 1;
}

message UpdateUsernameRequest {
    string new_username = 1;
}

message UpdateUsernameResponse {
    User user = 1;
}

message UpdatePasswordRequest {
    string old_password = 1;
    string new_password = 2;
}

message UpdatePasswordResponse {
    bool success = 1;
}

message GetMyRoomsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message GetMyRoomsResponse {
    repeated Room rooms = 1;
    int32 total = 2;
}

message GetJoinedRoomsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message GetJoinedRoomsResponse {
    repeated RoomWithRole rooms = 1;
    int32 total = 2;
}

message RoomWithRole {
    Room room = 1;
    int64 permissions = 2; // User's permissions in this room
    string role = 3; // creator, admin, member, guest
}

// Room Discovery
message CheckRoomRequest {
    string room_id = 1;
}

message CheckRoomResponse {
    bool exists = 1;
    bool requires_password = 2;
    string name = 3;
}

message GetHotRoomsRequest {
    int32 limit = 1; // Default 10, max 50
}

message GetHotRoomsResponse {
    repeated RoomWithStats rooms = 1;
}

message RoomWithStats {
    Room room = 1;
    int32 online_count = 2; // Current online users
    int32 total_members = 3;
}

// ==================== Live Streaming ====================

// NewPublishKey - Generate RTMP publish key for live streaming
// Note: room_id should be extracted from metadata/context by interceptor
// Note: user_id should be extracted from JWT Authorization header
message NewPublishKeyRequest {
    string id = 1;  // Media ID to publish (matches Go's IDReq pattern)
}

message NewPublishKeyResponse {
    string publish_key = 1;  // JWT token for RTMP authentication
    string rtmp_url = 2;     // Full RTMP URL (rtmp://host:port/live)
    string stream_key = 3;   // Stream key (room_id/media_id)
    int64 expires_at = 4;    // Token expiration timestamp
}
